# minesweeper

./: .gitignore  CMakeLists.txt  README.md  generate_headers.py
src/: main.c
